# word_based_rdr

./: .gitignore  0.7.3  README.md  TIB_test_maxmatched.txt.TAGGED  create_token.py  create_token_final.py  demo.py  pyproject.toml  requirements.txt  test_create_token.py
src/: botok_tokenizer_pipeline.py  botok_word_tokenizer_pipeline.py  compare_function_outputs.py  compare_strings.py  config.py  data_processor.py  pipeline.py  rdr_segmentation_accuracy.py  rdr_to_cql.py  split_merge_cql.py  tagger.py  tokenizer_pipeline.py  train_tag_rdr.py
src/RDRPOSTagger/InitialTagger/: InitialTagger.py
src/RDRPOSTagger/SCRDRlearner/: Object.py  SCRDRTreeLearner.py
src/RDRPOSTagger/Utility/: Get_token_attributes.py
src/RDRPOSTagger/pSCRDRtagger/: ExtRDRPOSTagger.py  RDRPOSTagger.py
src/Utility/: get_POS.py  get_syllables.py  regex_replacer.py  split_by_TSEK.py
src/comparator/: comparator.py
src/data/: TIB_demo.tsv  TIB_gold.txt  TIB_gold_tagged.txt  TIB_tagged.txt  TIB_test.txt  TIB_test_maxmatched.txt.TAGGED  TIB_train.tsv  TIB_train_botok_tagged.txt.TAGGED  TIB_train_maxmatched.txt.TAGGED  TIB_train_maxmatched_tagged.txt.DICT  TIB_train_maxmatched_tagged.txt.RDR  TIB_train_new.tsv
src/eval_rdr_result/: eval_rdr_result.py
src/max_matcher/: max_matcher.py
src/pipeline/: pipeline.py
src/preprocessing/: preprocessor.py
src/project_name/comparator/: comparator.py
src/rdr_2_cql/: rdr_2_cql.py  rdr_2_replace_matcher.py  split_merge_cql.py  split_merge_cql_for_tagged_string.py  split_merge_syls.py  split_merge_syls_for_tagged_string.py
src/resources/: TIB_train_CQL_rules_temp.txt
src/rules_generator/: annotation_transfer.py  compare_strings.py  config.py  data_processor.py  github_files_downloader.py  json_text_extractor.py  pipeline.py  rdr_segmentation_accuracy.py  rdr_to_cql.py  tagger.py  tokenizer_pipeline.py  train_tag_rdr.py
src/rules_generator/Utility/: get_POS.py  (+3 more)
src/tagger/: tagger.py
src/train_tag_rdr/: train_tag_rdr.py
tests/: rdr_code_flow.py  rdr_code_flow_test.py  test_botok_word_tokenizer_pipeline.py  test_comparator.py  test_compare_strings.py  test_cql_rules.py  test_cql_split.py  test_data_processor.py  test_eval_rdr_result.py  test_max_matcher.py  test_pipeline.py  test_preprocessing.py  test_rdr_segmentation_accuracy.py  test_tagger.py  test_tokenizer_pipeline.py
tests/data/: TIB_gold_corpus.txt  TIB_short_test_maxmatched.txt.TAGGED  TIB_test_maxmatched.txt.TAGGED
(+41 files in other folders)
