[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rules_generator"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "A package to produce word segmentation rules with gold corpus."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "bordr == 0.1.4",
  "botok >= 0.8.12",
  "certifi == 2023.7.22",
  "cfgv == 3.4.0",
  "charset-normalizer == 3.2.0",
  "click == 8.1.7",
  "colorama == 0.4.6",
  "coverage == 7.3.0",
  "distlib == 0.3.7",
  "filelock == 3.12.3",
  "identify == 2.5.27",
  "idna == 3.4",
  "iniconfig == 2.0.0",
  "nodeenv == 1.8.0",
  "ordered-set == 4.1.0",
  "packaging == 23.1",
  "pip == 23.2.1",
  "platformdirs == 3.10.0",
  "pluggy == 1.3.0",
  "pre-commit == 3.3.3",
  "pybo >= 0.8.0",
  "pyewts == 0.2.0",
  "pytest == 7.4.0",
  "pytest-cov == 4.1.0",
  "PyYAML == 6.0.1",
  "requests == 2.31.0",
  "setuptools == 65.5.0",
  "tibetan-sort == 0.2.0",
  "urllib3 == 2.0.4",
]



[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
